--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ h3 {
 .title {
   font-style: normal;
   font-weight: bold;
-  font-size: 44px;
+  font-size: 44p;
   line-height: 136%;
 }
 
@@ -160,7 +160,7 @@ h3 {
 
 .button {
   border-style: none;
-  background-color: rgb(112, 109, 67);
+  background-color: rgb(79, 173, 107);
   color: #ffffff;
   font-style: normal;
   font-weight: 500;
